# personal-analytics-hub

./: .bumpversion.cfg  .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
etl/: .gitignore  Dockerfile  config.yml  pyproject.toml
etl/alembic/: env.py
etl/alembic/versions/: 3689d60a53ba_add_cpi.py  501b15b2071c_initial.py  746ef686399d_add_nerddiary.py
etl/dbt/pah/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
etl/dbt/pah/macros/: cents_to_dollars.sql  explode_ancestors.sql  get_max_depth.sql  to_utc.sql
etl/dbt/pah/models/marts/expenses/: expenses.sql  expenses_by_month.sql
etl/dbt/pah/models/staging/drebedengi/: _drebedengi_schema.yml  _drebedengi_sources.yml  stg_drebedengi__account.sql  stg_drebedengi__change_record.sql  stg_drebedengi__currency.sql  stg_drebedengi__expense_category.sql  stg_drebedengi__income_source.sql  stg_drebedengi__tag.sql  stg_drebedengi__transaction.sql
etl/dbt/pah/models/staging/economy/: _economy_schema.yml  _economy_sources.yml  stg_economy__cpi.sql  stg_economy__x_change_rate.sql
etl/dbt/pah/models/staging/nerddiary/: _nerddiary_sources.yml  stg_nerddiary__headache_maria_log.sql  stg_nerddiary__headache_mike_log.sql  stg_nerddiary__morning_log.sql  stg_nerddiary__pill_log.sql
etl/dbt/pah/models/utilities/: all_dates.sql
etl/dbt/pah/seeds/drebedengi/: _drebedengi_seed_schema.yml  expense_category_group.csv
etl/dbt/pah/seeds/economy/: _cpi_seed_schema.yml  cpi_area_codes.csv  cpi_item_codes.csv
etl/loader/: __init__.py  cli.py  config.py  db.py  load.py  log.py  models.py  session.py
etl/loader/drebedengi/: __init__.py  loader.py  models.py
etl/loader/economy/: __init__.py  cpi.py  models.py  xchange_rate.py
etl/loader/nerddiary/: loader.py  models.py
etl/scripts/: docker-init.sh  entrypoint.sh  load-data.sh
postgres/: 1_init_multi_db.sh  Dockerfile
scripts/: docker_build.sh  gen_models_schema_yml.fish  gen_source_models.fish  reset_and_init.sh  superset_export.sh  superset_import.sh  upgrade.sh
superset/: .env-superset  Dockerfile
superset/backups/: .gitignore
superset/docker/: docker-bootstrap.sh  docker-init.sh
superset/docker/pythonpath_dev/: .gitignore  superset_config.py  superset_config_docker.py
